# flowith2api

./: .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
static/: manage.html
storage/: __init__.py  base.py  database_storage.py  factory.py  json_storage.py
