[project]
name = "flowith2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "bcrypt==4.2.1",
    "fastapi==0.119.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.12",
    "pydantic==2.10.4",
    "python-dateutil==2.8.2",
    "python-dotenv>=1.0.0",
    "python-multipart==0.0.20",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]==0.32.1",
]
